軽微な修正,寮生用ページの寮と高専のコンテンツの分類を明確化

--- a/pages/english/purpose.html
+++ b/pages/english/purpose.html
@@ -83,7 +83,7 @@
   <!--container-->
   <div id="container">
     <div class="pair-right">
-      <img src="../../assets/images/OverView.jpg">
+      <img style="border-radius: 5%;" src="../../assets/images/OverView.jpg">
       <div>
         <h4>Purpose</h4>
         <p class="right-content">　The purpose of this dormitory is to contribute to the achievement of educational goals by providing convenience to students in
@@ -120,7 +120,7 @@
             effective use of their time.</p>
         </div>
       </div>
-      <img class="Vertically-img" src="../../assets/images/RadioCalisthenics.png">
+      <img style="border-radius: 5%;" class="Vertically-img" src="../../assets/images/RadioCalisthenics.png">
     </div>
     <h4>Status of Takajo Dormitory</h4>
     <div class="content">
