--- a/pages/event.html
+++ b/pages/event.html
@@ -80,7 +80,7 @@
   <!--container-->
   <div id="container">
     <div class="pair-right">
-      <img src="../assets/images/OverViewSky.JPG">
+      <img style="border-radius: 5%;" src="../assets/images/OverViewSky.JPG">
       <div>
         <h4>寮生活</h4>
         <p class="right-content">
