--- a/pages/purpose.html
+++ b/pages/purpose.html
@@ -80,7 +80,7 @@
   <!--container-->
   <div id="container">
     <div class="pair-right">
-      <img src="../assets/images/OverView.jpg">
+      <img style="border-radius: 5%;" src="../assets/images/OverView.jpg">
       <div>
         <h4>目的</h4>
         <p class="right-content">　学生の修学に便宜を供与し、かつ、その人間形成を助長して、教育目標の達成に資することを目的としています。<br>
@@ -112,7 +112,7 @@
             　また、通学に要する時間が５分程度と極端に短いため、この時間帯をクラブ活動に当てることができるなど、時間の有効利用が可能です。</p>
         </div>
       </div>
-      <img class="Vertically-img" src="../assets/images/RadioCalisthenics.png">
+      <img style="border-radius: 5%;" class="Vertically-img" src="../assets/images/RadioCalisthenics.png">
     </div>
     <h4>高城寮の状況</h4>
     <div class="content">
