--- a/pages/english/student.html
+++ b/pages/english/student.html
@@ -37,6 +37,30 @@
   <meta property="twitter:site" content="@TakajoDormitory">
   <meta property="og:site_name" content="Students page | Takajo dormitory" />
   <meta property="og:locale" content="ja_JP" />
+  <style>
+    h6 {
+      font-size: 20px;
+    }
+
+    #container h6 {
+      width: 110px;
+      margin: 15px auto 30px auto;
+      border-bottom: solid 3px #253965;
+      text-align: center;
+    }
+
+    @media screen and (min-width: 1030px) {
+      #container h6 {
+        margin-left: calc(50vw - 500px);
+      }
+    }
+
+    @media screen and (max-width: 1030px) {
+      #container h6 {
+        margin-left: 30px;
+      }
+    }
+  </style>
 </head>
 
 <body>
@@ -85,6 +109,9 @@
     <div class="middle">
       <h4 class="middle-content">Sites for students</h4>
     </div>
+    <div>
+      <h6>Dormitory</h6>
+    </div>
     <div class="student">
       <div class="student_element">
         <a target="_blank" rel="noopener noreferrer" href="https://bicycle.takajo-dormitory.tk/">
@@ -119,6 +146,26 @@
           </a>
           <p>Server rental</p>
       </div>
+      <!-- 休耕期間でないため除外 -->
+      <!-- <div class="student_element">
+        <a target="_blank" rel="noopener noreferrer"
+          href="https://forms.office.com/Pages/ResponsePage.aspx?Host=Teams&lang=%7Blocale%7D&groupId=%7BgroupId%7D&tid=%7Btid%7D&teamsTheme=%7Btheme%7D&upn=%7Bupn%7D&id=XYP-cpVeEkWK4KezivJfyFRDvD4Mh2xOup53lI_6q5dUMzBVRjRNSFBDTTZTNUpQVThOTzk3SzJHSyQlQCN0PWcu">
+          <img src="../../assets/images/student/ground.png">
+        </a>
+        <p>Schoolyard used log</p>
+      </div> -->
+      <div class="student_element">
+        <a target="_blank" rel="noopener noreferrer"
+          href="https://forms.office.com/Pages/ResponsePage.aspx?id=XYP-cpVeEkWK4KezivJfyJYZKS5tU_5OjDR63Mlm_KNUQzlURENaRFpRQ1dVNjlRVzFHRzE3TFk2Ny4u">
+          <img src="../../assets/images/student/GitHub.png">
+        </a>
+        <p>GitHub application</p>
+      </div>
+    </div>
+    <div>
+      <h6>NITTC</h6>
+    </div>
+    <div class="student">
       <div class="student_element">
         <a target="_blank" rel="noopener noreferrer" href="https://syllabus.kosen-k.go.jp/Pages/PublicDepartments?school_id=35">
           <img src="../../assets/images/student/syllabus.png">
@@ -136,20 +183,6 @@
           <img src="../../assets/images/student/jikanwari.png">
         </a>
         <p>NITTC timetable</p>
-      </div>
-      <div class="student_element">
-        <a target="_blank" rel="noopener noreferrer"
-          href="https://forms.office.com/Pages/ResponsePage.aspx?Host=Teams&lang=%7Blocale%7D&groupId=%7BgroupId%7D&tid=%7Btid%7D&teamsTheme=%7Btheme%7D&upn=%7Bupn%7D&id=XYP-cpVeEkWK4KezivJfyFRDvD4Mh2xOup53lI_6q5dUMzBVRjRNSFBDTTZTNUpQVThOTzk3SzJHSyQlQCN0PWcu">
-          <img src="../../assets/images/student/ground.png">
-        </a>
-        <p>Schoolyard used log</p>
-      </div>
-      <div class="student_element">
-        <a target="_blank" rel="noopener noreferrer"
-          href="https://forms.office.com/Pages/ResponsePage.aspx?id=XYP-cpVeEkWK4KezivJfyJYZKS5tU_5OjDR63Mlm_KNUQzlURENaRFpRQ1dVNjlRVzFHRzE3TFk2Ny4u">
-          <img src="../../assets/images/student/GitHub.png">
-        </a>
-        <p>GitHub application</p>
       </div>
     </div>
 
