スマホでの画像のバグフィックス

--- a/pages/english/event.html
+++ b/pages/english/event.html
@@ -83,7 +83,7 @@
   <!--container-->
   <div id="container">
     <div class="pair-right">
-      <img style="border-radius: 5%;" src="../../assets/images/OverViewSky.JPG">
+      <img class="radius-img" src="../../assets/images/OverViewSky.JPG">
       <div>
         <h4>Dormitory students life</h4>
         <p class="right-content">
