--- a/pages/contact.html
+++ b/pages/contact.html
@@ -114,7 +114,7 @@
     <a href="site.html">
       <p><span id="site">このサイトについて</span></p>
     </a>
-    <p id="copyright">© 2020-2022 TakajoDormitory All Rights Reserved.</p>
+    <p id="copyright"></p>
   </div>
 
   <script type="text/javascript" src="../assets/scripts/jquery-3.5.1.min.js"></script> <!-- jquery -->
