--- a/pages/english/index.html
+++ b/pages/english/index.html
@@ -157,7 +157,7 @@
     <a href="site.html">
       <p><span id="site">About this site</span></p>
     </a>
-    <p id="copyright">© 2020-2022 TakajoDormitory All Rights Reserved.</p>
+    <p id="copyright"></p>
   </div>
 
 
