--- a/pages/english/index.html
+++ b/pages/english/index.html
@@ -101,10 +101,10 @@
       <div id="department">
         <h1><span class="title">Endeavors</span></h1>
         <a href="studying.html">
-          <h3><i class="fas fa-graduation-cap"></i> Educational Support</h3>
+          <h3><i class="fas fa-graduation-cap"></i> Education Support</h3>
         </a>
         <a href="env.html">
-          <h3><i class="fas fa-broom"></i> Living Environment</h3>
+          <h3><i class="fas fa-broom"></i> Environment</h3>
         </a>
         <a href="meet.html">
           <h3><i class="fas fa-futbol"></i> Exchange Event</h3>
