--- a/pages/english/it.html
+++ b/pages/english/it.html
@@ -4,6 +4,7 @@
 <head prefix="og: https://ogp.me/ns# fb: https://ogp.me/ns/fb#">
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../../assets/styles/common.css" type="text/css">
+  <link rel="stylesheet" href="../../assets/styles/it.css" type="text/css">
   <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
   <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet"> <!-- Font Awesome -->
   <link rel="icon" href="../../assets/images/favicon/favicon-16x16.png" sizes="16x16" />
@@ -36,48 +37,6 @@
   <meta property="twitter:site" content="@TakajoDormitory">
   <meta property="og:site_name" content="お問い合わせ | 高城寮" />
   <meta property="og:locale" content="ja_JP" />
-  <style>
-    .TextTyping span {
-      display: none;
-    }
-
-    @keyframes typinganime {
-      from {
-        opacity: 0
-      }
-
-      to {
-        opacity: 1
-      }
-    }
-
-    @media screen and (max-width: 870px) {
-      .message {
-        word-break: break-word;
-        margin-left: 2vw;
-        margin-top: 100px;
-        font-size: 36px;
-        line-height: 1.92;
-      }
-    }
-
-    @media screen and (min-width: 870px) {
-      .message {
-        margin-left: 10vw;
-        margin-top: 200px;
-        font-size: 54px;
-        line-height: 1.92;
-      }
-    }
-
-    .message p {
-      margin: 0;
-    }
-
-    .content {
-      font-size: 21px;
-    }
-  </style>
 </head>
 
 <body>
@@ -135,6 +94,30 @@
       <p class="TextTyping">We also provide full support for dormitory students who are interested in IT.</p>
       <a href="https://github.com/TakajoDormitory" target="_blank">Takajo Dormitory GitHub</a>
     </div>
+  </div>
+  <div id="achievement">
+    <h2 class="TextTyping">Achievement</h2>
+    <h3 class="TextTyping">2021</h3>
+    <ul>
+      <li class="TextTyping">
+        ・Bicycle Lending System
+      </li>
+      <li class="TextTyping">
+        ・Dormitory Meal Count Check System
+      </li>
+      <li class="TextTyping">
+        ・Official website of the dormitory
+      </li>
+      <li class="TextTyping">
+        ・Operation monitoring system for washing machines and dryers
+      </li>
+      <li class="TextTyping">
+        ・Monitoring system for hot water supply in women's dormitory
+      </li>
+      <li class="TextTyping">
+        ・Roll call check system
+      </li>
+    </ul>
   </div>
   <!--footer-->
   <div class="footer">
