--- a/pages/english/index.html
+++ b/pages/english/index.html
@@ -134,7 +134,7 @@
       <h2><span>Short Movie</span></h2>
       <h3>Tap the image to play the short movie.</h3>
       <div class="youtube">
-        <iframe id="inner-video" data-src="https://www.youtube.com/embed/RhxgednKg8Y"></iframe>
+        <iframe id="inner-video" data-src="https://www.youtube.com/embed/yjY1wUuG7WM"></iframe>
       </div>
     </div>
 
