:sparkles:feat: access to the calendar page directly

--- a/pages/student.html
+++ b/pages/student.html
@@ -89,7 +89,7 @@
     </div>
     <div class="student">
       <div class="student_element">
-        <a target="_blank" rel="noopener noreferrer" href="https://bicycle.takajo-dormitory.tk/">
+        <a target="_blank" rel="noopener noreferrer" href="https://bicycle.takajo-dormitory.tk/booking/calendar/">
           <img src="../assets/images/student/Bicycle.png">
         </a>
         <p>電動自転車貸し出し</p>
