--- a/pages/english/student.html
+++ b/pages/english/student.html
@@ -90,7 +90,7 @@
     </div>
     <div class="student">
       <div class="student_element">
-        <a target="_blank" rel="noopener noreferrer" href="https://bicycle.takajo-dormitory.tk/">
+        <a target="_blank" rel="noopener noreferrer" href="https://bicycle.takajo-dormitory.tk/booking/calendar/">
           <img src="../../assets/images/student/Bicycle.png">
         </a>
         <p>Bicycle rental</p>
