:memo:docs: Delete NITTC

--- a/pages/english/student.html
+++ b/pages/english/student.html
@@ -146,19 +146,19 @@
         <a target="_blank" rel="noopener noreferrer" href="https://syllabus.kosen-k.go.jp/Pages/PublicDepartments?school_id=35">
           <img src="../../assets/images/student/syllabus.png">
         </a>
-        <p>NITTC syllabus</p>
+        <p>Syllabus</p>
       </div>
       <div class="student_element">
         <a target="_blank" rel="noopener noreferrer" href="https://www.tokuyama.ac.jp/school/info/schedule.html">
           <img src="../../assets/images/student/calendar.png">
         </a>
-        <p>NITTC calendar</p>
+        <p>Calendar</p>
       </div>
       <div class="student_element">
         <a target="_blank" rel="noopener noreferrer" href="https://www.tokuyama.ac.jp/edu/jikanwari.html">
           <img src="../../assets/images/student/jikanwari.png">
         </a>
-        <p>NITTC timetable</p>
+        <p>Timetable</p>
       </div>
     </div>
 
