--- a/pages/student.html
+++ b/pages/student.html
@@ -145,19 +145,19 @@
         <a target="_blank" rel="noopener noreferrer" href="https://syllabus.kosen-k.go.jp/Pages/PublicDepartments?school_id=35">
           <img src="../assets/images/student/syllabus.png">
         </a>
-        <p>徳山高専 シラバス</p>
+        <p>シラバス</p>
       </div>
       <div class="student_element">
         <a target="_blank" rel="noopener noreferrer" href="https://www.tokuyama.ac.jp/school/info/schedule.html">
           <img src="../assets/images/student/calendar.png">
         </a>
-        <p>徳山高専 行事予定</p>
+        <p>行事予定表</p>
       </div>
       <div class="student_element">
         <a target="_blank" rel="noopener noreferrer" href="https://www.tokuyama.ac.jp/edu/jikanwari.html">
           <img src="../assets/images/student/jikanwari.png">
         </a>
-        <p>徳山高専 授業時間割</p>
+        <p>授業時間割</p>
       </div>
     </div>
   </div>
