[2024/3/7]takajo-dormitory.tk　→　takajo-dormitory.org

--- a/pages/student.html
+++ b/pages/student.html
@@ -89,7 +89,7 @@
     </div>
     <div class="student">
       <div class="student_element">
-        <a target="_blank" rel="noopener noreferrer" href="https://bicycle.takajo-dormitory.tk/booking/calendar/">
+        <a target="_blank" rel="noopener noreferrer" href="https://bicycle.takajo-dormitory.org/booking/calendar/">
           <img src="../assets/images/student/Bicycle.png">
         </a>
         <p>電動自転車貸し出し</p>
@@ -116,7 +116,7 @@
       </div>
       <div class="student_element">
         <a target="_blank" rel="noopener noreferrer" href="#">
-          <a href="https://server-register.takajo-dormitory.tk/">
+          <a href="https://server-register.takajo-dormitory.org/">
             <img src="../assets/images/student/server.png">
           </a>
           <p>サーバ運用申請</p>
