--- a/pages/english/student.html
+++ b/pages/english/student.html
@@ -90,7 +90,7 @@
     </div>
     <div class="student">
       <div class="student_element">
-        <a target="_blank" rel="noopener noreferrer" href="https://bicycle.takajo-dormitory.tk/booking/calendar/">
+        <a target="_blank" rel="noopener noreferrer" href="https://bicycle.takajo-dormitory.org/booking/calendar/">
           <img src="../../assets/images/student/Bicycle.png">
         </a>
         <p>Bicycle rental</p>
@@ -117,7 +117,7 @@
       </div>
       <div class="student_element">
         <a target="_blank" rel="noopener noreferrer" href="#">
-          <a href="https://server-register.takajo-dormitory.tk/">
+          <a href="https://server-register.takajo-dormitory.org/">
             <img src="../../assets/images/student/server.png">
           </a>
           <p>Server rental</p>
