[2024/4/8] update:令和６年度版

--- a/pages/event.html
+++ b/pages/event.html
@@ -95,7 +95,7 @@
         </p>
       </div>
     </div>
-    <h4>高城寮の行事</h4>
+    <h4>高城寮の行事(令和６年度)</h4>
     <div class="content" style="margin-bottom: 50px;">
       　高城寮では寮生の自主性を重んじ、寮生活に関わるさまざまな事柄を寮生会が中心となって行っています。
       年間を通し、新入寮生歓迎マッチや予餞会など各種のイベントが行われていますが、これらのイベントも寮生会が中心となり企画・運営しています。<br>
@@ -105,82 +105,86 @@
     <table>
       <tr>
         <th>4月</th>
-        <td>入寮式<br>
-          前期リーダー研修会<br>
-          前期寮生総会<br>
-          新入寮生対面式<br>
-          新入寮生歓迎マッチ
+        <td>
+          4/2 開寮、入寮式、前期寮生リーダー研修会<br>
+          4/4 前期寮生総会、新入寮生対面式<br>
+          4/20 新入寮生歓迎マッチ
         </td>
       </tr>
       <tr>
         <th>5月</th>
         <td>
-          避難訓練<br>
-          勉強会
+          5/3 閉寮<br>
+          5/6 開寮<br>
+          5/16 前期学寮避難訓練<br>
+          学寮勉強会
         </td>
       </tr>
       <tr>
         <th>6月</th>
         <td>
-          保護者会<br>
-          寮生マッチ
+          6/23 第1回寮生保護者会<br>
+          6/27 高城寮夏まつり
         </td>
       </tr>
       <tr>
         <th>7月</th>
         <td>
-          七夕会<br>
-          勉強会<br>
-          学寮見学会
+          学寮勉強会
         </td>
       </tr>
       <tr>
         <th>8月</th>
-        <td>閉寮</td>
+        <td>
+          8/10 閉寮<br>
+          8/24 第1回学寮見学会
+        </td>
       </tr>
       <tr>
         <th>9月</th>
         <td>
-          開寮<br>
-          後期リーダー研修会
+          9/5 第2回寮生保護者会<br>
+          9/30 開寮
         </td>
       </tr>
       <tr>
         <th>10月</th>
         <td>
-          後期寮生総会<br>
-          保護者会
+          10/2 後期寮生リーダ―研修会<br>
+          10/3 後期寮生総会<br>
+          10/19 後期寮生マッチ
         </td>
       </tr>
       <tr>
         <th>11月</th>
         <td>
-          勉強会<br>
-          学寮見学会
+          11/9 第2回学寮見学会<br>
+          11/14 後期学寮避難訓練<br>
+          学寮勉強会
         </td>
       </tr>
       <tr>
         <th>12月</th>
         <td>
-          クリスマス会<br>
-          閉寮
+          12/12 寮生会選挙<br>
+          12/15 高城寮冬まつり<br>
+          12/21 閉寮
         </td>
       </tr>
       <tr>
         <th>1月</th>
         <td>
-          開寮<br>
-          寮生会選挙<br>
-          勉強会<br>
-          寮生会役員引継会<br>
-          予餞会
+          1/6 開寮<br>
+          1/9 予餞会<br>
+          1/16 寮生会引き継ぎ会<br>
+          学寮勉強会
         </td>
       </tr>
       <tr>
         <th>2月</th>
         <td>
-          卒寮会<br>
-          閉寮
+          2/17 卒寮式<br>
+          2/22 閉寮
         </td>
       </tr>
     </table>
